--- a/Projet Web Commerce/Views/Messagerie/EnvoyerMessage.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/EnvoyerMessage.cshtml
@@ -1,4 +1,5 @@
 ﻿﻿﻿@using Microsoft.AspNetCore.Identity
+@using Newtonsoft.Json
 @using Projet_Web_Commerce.Data
 @inject AuthDbContext _context
 @inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> UserManager
@@ -56,64 +57,153 @@
 }
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <section>
-            <form id="frmCourriel" method="post" asp-route-envoyeur="@user.Email" onsubmit="return soumettreForm()">
-                <h2>Envoyer un message</h2>
-                <hr />
-                <div class="form-floating mb-3">
-                    <input name="sujet" class="form-control" aria-required="true" required
-                           oninvalid="setCustomValidity('Veuillez remplir ce champ.')"
-                           oninput="setCustomValidity('')" />
-                    <label class="form-label">Le sujet</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <input name="message" class="form-control" aria-required="true" required
-                           oninvalid="setCustomValidity('Veuillez remplir ce champ.')"
-                           oninput="setCustomValidity('')" />
-                    <label class="form-label">Votre message</label>
-                </div>
-                <div class="form-floating mb-3">
-                    <div class="card">
-                        <div class="card-header">
-                            Envoyer à
-                        </div>
-                        <div class="card-body">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="destinataires" id="sendToAll" onclick="cacherDDL()">
-                                <label class="form-check-label" for="sendToAll">
-                                    Tout le monde
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="destinataires" id="sendToGestionnaire" onclick="cacherDDL()">
-                                <label class="form-check-label" for="sendToGestionnaire">
-                                    Au gestionnaire
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="destinataires" id="sendToClients">
-                                <label class="form-check-label" for="sendToClients">
-                                    À un ou plusieurs de vos clients
-                                </label>
-                                <select class="form-select" multiple name="ddlClients" id="ddlClients" style="display:none">
-                                    @foreach (var utilisateur in listeUtilisateurs)
+            <div>
+                @Html.Partial("MenuMessagerie", "EnvoyerMessage")
+            </div>
+            <div class="card">
+                <form id="frmCourriel" method="post" asp-route-envoyeur="@user.Email" onsubmit="return soumettreForm()">
+                    <div class="card-body">
+                        <h2 class="card-title">Envoyer un message</h2>
+                        <hr />
+                        <div class="form-floating mb-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    Envoyer à
+                                </div>
+                                <div class="card-body">
+                                    @* @foreach (var utilisateur in listeUtilisateurs)
                                     {
-                                        <option value="@utilisateur.Email">@utilisateur.Email</option>
-                                    }
-                                </select>
+                                        <div class="card" style="width:fit-content">
+                                            <div class="card-body">
+                                                <select class="form-select" multiple name="ddlClients" id="ddlClients" style="display:none">
+                                                    <option value="@utilisateur.Email">@utilisateur.Email</option>
+                                                </select>
+                                               <button>X</button>
+                                            </div>
+                                        </div>
+                                    } *@
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="destinataires" id="sendToAll" onclick="cacherDDL()">
+                                        <label class="form-check-label" for="sendToAll">
+                                            Tout le monde
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="destinataires" id="sendToGestionnaire" onclick="cacherDDL()">
+                                        <label class="form-check-label" for="sendToGestionnaire">
+                                            Au gestionnaire
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="destinataires" id="sendToClients">
+                                        <label class="form-check-label" for="sendToClients">
+                                            À un ou plusieurs de vos clients
+                                        </label>
+                                        <select class="form-select" multiple name="ddlClients" id="ddlClients" style="display:none">
+                                            @foreach (var utilisateur in listeUtilisateurs)
+                                            {
+                                                <option value="@utilisateur.Email">@utilisateur.Email</option>
+                                            }
+                                        </select>
+                                    </div>
+                                </div>
                             </div>
+                            <input type="hidden" name="selectedDestinataire" id="selectedDestinataire" value="">
+                            <input type="hidden" name="auteur" id="auteur" value="">
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input name="sujet" class="form-control" aria-required="true" required
+                                   oninvalid="setCustomValidity('Veuillez remplir ce champ.')"
+                                   oninput="setCustomValidity('')" />
+                            <label class="form-label">Le sujet</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input name="message" class="form-control" aria-required="true" required
+                                   oninvalid="setCustomValidity('Veuillez remplir ce champ.')"
+                                   oninput="setCustomValidity('')" />
+                            <label class="form-label">Votre message</label>
+                        </div>
+                        <div>
+                            <button id="btnEnvoyer" type="submit" class="w-100 btn btn-lg btn-primary" style="color: rgb(249, 229, 71); background-color: rgb(124, 105, 146)">Envoyer</button>
                         </div>
                     </div>
-                    <input type="hidden" name="selectedDestinataire" id="selectedDestinataire" value="">
-                </div>
-                <div>
-                    <button id="btnEnvoyer" type="submit" class="w-100 btn btn-lg btn-primary" style="color: rgb(249, 229, 71); background-color: rgb(124, 105, 146)">Envoyer</button>
-                </div>
-            </form>
+                    
+                </form>
+            </div>
         </section>
     </div>
 </div>
+
+
+@* <div class="row">
+    <div class="col-md-4">
+        <section>
+            <div class="row">
+                <div class="col-md-6">
+                    @Html.Partial("MenuMessagerie")
+                </div>
+                <div class="col-md-6">
+                    <form id="frmCourriel" method="post" asp-route-envoyeur="@user.Email" onsubmit="return soumettreForm()">
+                        <h2>Envoyer un message</h2>
+                        <hr />
+                        <div class="form-floating mb-3">
+                            <input name="sujet" class="form-control" aria-required="true" required
+                                   oninvalid="setCustomValidity('Veuillez remplir ce champ.')"
+                                   oninput="setCustomValidity('')" />
+                            <label class="form-label">Le sujet</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input name="message" class="form-control" aria-required="true" required
+                                   oninvalid="setCustomValidity('Veuillez remplir ce champ.')"
+                                   oninput="setCustomValidity('')" />
+                            <label class="form-label">Votre message</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    Envoyer à
+                                </div>
+                                <div class="card-body">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="destinataires" id="sendToAll" onclick="cacherDDL()">
+                                        <label class="form-check-label" for="sendToAll">
+                                            Tout le monde
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="destinataires" id="sendToGestionnaire" onclick="cacherDDL()">
+                                        <label class="form-check-label" for="sendToGestionnaire">
+                                            Au gestionnaire
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="destinataires" id="sendToClients">
+                                        <label class="form-check-label" for="sendToClients">
+                                            À un ou plusieurs de vos clients
+                                        </label>
+                                        <select class="form-select" multiple name="ddlClients" id="ddlClients" style="display:none">
+                                            @foreach (var utilisateur in listeUtilisateurs)
+                                            {
+                                                <option value="@utilisateur.Email">@utilisateur.Email</option>
+                                            }
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <input type="hidden" name="selectedDestinataire" id="selectedDestinataire" value="">
+                            <input type="hidden" name="auteur" id="auteur" value="">
+                        </div>
+                        <div>
+                            <button id="btnEnvoyer" type="submit" class="w-100 btn btn-lg btn-primary" style="color: rgb(249, 229, 71); background-color: rgb(124, 105, 146)">Envoyer</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+    </div>
+</div> *@
 
 <script>
     $(document).ready(function () {
@@ -129,7 +219,7 @@
     function soumettreForm() {
         var selectedDestinataire = document.getElementById('selectedDestinataire');
         selectedDestinataire.value = "null";
-
+        document.getElementById('auteur').value = '@user.Email';
         var valide = true;
         var msgErreur = "";
 
