--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -164,7 +164,7 @@
             else
             {
                 <h3>Liste des nouveaux produits </h3>
-                <a asp-area="Identity" asp-page="/Account/Register">Cliquez ici pour devenir client et accéder à tout le catalogue du vendeur</a>
+                <a asp-area="Identity" asp-page="/Account/Login">Cliquez ici pour devenir client et accéder à tout le catalogue du vendeur</a>
             }
 
 
@@ -214,15 +214,14 @@
                                     <p class="card-text">Prix : @Html.DisplayFor(modelItem => item.PrixDemande) $ </p>
                                 }
 
-                                <a asp-controller="PPProduits"
-                                   asp-route-id="@item.NoProduit"
-                                   asp-action="Details"
-                                   class="btn btn-secondary mt-auto" style="background-color:@backgroundButtonDetail; color: @textButtonDetail">
-                                    Details
-                                </a>
-
                                 @if (SignInManager.IsSignedIn(User) && User.IsInRole("Client") && item.NombreItems > 0)
                                 {
+                                    <a asp-controller="PPProduits"
+                                       asp-route-id="@item.NoProduit"
+                                       asp-action="Details"
+                                       class="btn btn-secondary mt-auto" style="background-color:@backgroundButtonDetail; color: @textButtonDetail">
+                                        Details
+                                    </a>
                                     <form asp-controller="MainMenu" id="formAjoutPanier" asp-action="AjoutPanier" method="post">
                                         <input type="hidden" name="NoProduit" value="@item.NoProduit" />
                                         <input type="hidden" name="NoClient" value="@Model.noClient" />
