--- a/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueVendeur.cshtml
@@ -86,7 +86,7 @@
         }
         
 
-                <h3 style="color:@text">Liste de tout les produits @Model.nomAffaire </h3>
+                <h3 style="color:@text; font-family:@font">Liste de tout les produits @Model.nomAffaire </h3>
 
         @using (Html.BeginForm("CatalogueVendeur", "MainMenu", FormMethod.Post, new { id = "mainForm" }))
                 {
