fixed a bunch of things related to panier

--- a/Projet Web Commerce/Views/PPProduits/ListePanier.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/ListePanier.cshtml
@@ -151,7 +151,7 @@
                                     if (oldestProductDate != null && oldestProductDate < DateTime.Now.AddMonths(-6))
                                     {
                                         <a> | </a>
-                                        <a class="btn btn-danger" asp-action="DeletePanier" asp-route-id="@client.NoClient">Supprimer</a>
+                                        <a class="btn btn-danger" asp-action="SupprimerPanier" asp-route-id="@client.NoClient">Supprimer</a>
                                     }
                                 }
                             </div>
