--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -105,9 +105,13 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="container-custom H-100" style="background-color: @background">
-        &copy; 2024 - Projet_Web_Commerce - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-    </footer>
+    @if (!Context.Request.Path.Value.Contains("/PPProduits/DetailsPanier"))
+    {
+        <footer class="container-custom H-100" style="background-color: @background">
+            &copy; 2024 - Projet_Web_Commerce - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </footer>
+    }
+
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
