--- a/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
@@ -1,6 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @model Projet_Web_Commerce.Models.ModelCatalogue
+@using Projet_Web_Commerce.Data
+
+@inject AuthDbContext _context
 @inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 @inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> UserManager
 
@@ -49,14 +52,23 @@ else
             @foreach (var panier in ViewBag.listPaniers)
             {
                 PPVendeurs vendeur = Model.VendeursList.Where(p => p.NoVendeur == panier.vendeur).FirstOrDefault();
+                decimal total = 0;
+                int nbTot = 0;
+                foreach (int article in panier.articles){
+                    var articleEnPanier = _context.PPArticlesEnPanier.Where(p => p.NoPanier == article).FirstOrDefault();
+                    var produit = Model.ProduitsList.Where(p => p.NoProduit == articleEnPanier.NoProduit).FirstOrDefault();
+                    var prixProduit = produit.PrixVente != null && DateTime.Now < produit.DateVente?produit.PrixVente:produit.PrixDemande;
+                    total += articleEnPanier.NbItems * (decimal)prixProduit;
+                    nbTot += articleEnPanier.NbItems;
+                }
 
                 <a asp-route-id="@vendeur.NoVendeur" asp-area="" asp-controller="Panier" asp-action="Index">
                     <div class="slide">
                         <div class="card">
                             <div class="card-body">
                                 <h2 class="card-title">@vendeur.NomAffaires</h2>
-                                <h5 class="card-details">Nombre d'articles: @panier.articles.Count</h5>
-        
+                                <h4>@vendeur.Prenom @vendeur.Nom</h4>
+                                <h5 class="card-details">Nombre d'articles: @nbTot (@total $)</h5>
                     
                         </div>
                         </div>
