--- a/Projet Web Commerce/Views/Panier/Index.cshtml
+++ b/Projet Web Commerce/Views/Panier/Index.cshtml
@@ -60,7 +60,9 @@
                                         <div class="d-flex justify-content-between align-items-center mb-5">
                                             @if (vendeur != null)
                                             {
-                                            <h1 class="fw-bold mb-0 text-black">Panier associé à @vendeur.NomAffaires</h1>
+                                                <h1 class="fw-bold mb-0 text-black">
+                                                    Panier associé à <a asp-controller="MainMenu" asp-route-nomAffaire="@vendeur.NomAffaires" asp-action="CatalogueVendeur">@vendeur.NomAffaires</a>
+                                                </h1>
                                             }
                                             <h6 class="mb-0 text-muted">@Html.DisplayFor(modelItem => nbTotal) Items</h6>
                                         </div>
