--- a/Projet Web Commerce/Views/Commande/CommandeCompleter.cshtml
+++ b/Projet Web Commerce/Views/Commande/CommandeCompleter.cshtml
@@ -3,8 +3,8 @@
     <h1>Post Response Commander</h1>
 
     <div>
-        <h4>No Autorisation: @Model.NoAutorisation</h4>
-        <h4>Date Autorisation: @Model.DateAutorisation</h4>
-        <h4>Frais Marchand: @Model.FraisMarchand</h4>
-        <h4>Info Supplémentaire: @Model.InfoSuppl</h4>
+        <h4>No Autorisation: @ViewBag.NoAutorisation</h4>
+    <h4>Date Autorisation: @ViewBag.DateAutorisation</h4>
+    <h4>Frais Marchand: @ViewBag.FraisMarchand</h4>
+    <h4>Info Supplémentaire: @ViewBag.InfoSuppl</h4>
     </div>
