--- a/Projet Web Commerce/Views/Messagerie/Envoyes.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Envoyes.cshtml
@@ -4,7 +4,7 @@
 @inject AuthDbContext _context
 
 @{
-    ViewData["Title"] = "Boîte de réception";
+    ViewData["Title"] = "Messages envoyés";
 }
 
 <style>
@@ -12,36 +12,34 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        max-width: 300px;
+        max-width: 350px;
     }
 
     .msg {
         color: gray;
     }
 
-    .flotter:hover {
-        background-color: rgb(236, 235, 243);
-        cursor: pointer;
-    }
+    
 </style>
 
 <div class="row">
     <div class="col">
         <section>
             <div>
-                @Html.Partial("MenuMessagerie", "BoiteDeReception")
+                @Html.Partial("MenuMessagerie", "Envoyes")
             </div>
             <div class="card">
                 <div class="card-body">
-                    <h2 class="card-title">Boîte de réception</h2>
+                    <h2 class="card-title">Messages envoyés</h2>
                     <hr />
                     <table class="table">
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
-                                <th scope="col">Expéditeur</th>
+                                <th scope="col">Destinataire(s)</th>
                                 <th scope="col">Objet - <span class="msg">Message</span></th>
-                                <th scope="col">Date de l'envoi</th>
+                                <th scope="col" class="ms-auto">Date de l'envoi</th>
+                                @* <th scope="col" class="ms-auto"></th> *@
                             </tr>
                         </thead>
                         <tbody>
@@ -50,13 +48,14 @@
                             }
                             @foreach (var msg in Model)
                             {
-                                <tr class="flotter" onclick="window.location.href = '@Url.Action("Details", new { idMessage = msg.NoMessage })'">
+                                <tr class="flotter" onclick="window.location.href = '@Url.Action("Details")'">
                                     <td>@(++no)</td>
-                                    <td>@_context.Users.Where(u => u.Id == msg.Auteur).FirstOrDefault().Email</td>
+                                    <td>@msg.Destinataires?.FirstOrDefault()?.DestinataireUser?.Email</td>
                                     <td class="truncate">@Html.DisplayFor(modelItem => msg.Sujet) - <span class="msg">@Html.DisplayFor(modelItem => msg.Message)</span></td>
-                                    <td>@DateTime.Now.Date</td> @* <td>@Html.DisplayFor(modelItem => msg.Message.DateMessage)</td> *@
+                                    <td class="ms-auto">@DateTime.Now.Date</td>
+                                    @* <td>@msg.DateMessage.ToShortDateString()</td> *@
+                                    @* <td class="ms-auto"><button class="ms-auto" onclick="showDetails('@msg.NoMessage')">Détails</button></td> *@
                                 </tr>
-                                
                             }
                         </tbody>
                     </table>
