--- a/Projet Web Commerce/Views/Shared/MenuMessagerie.cshtml
+++ b/Projet Web Commerce/Views/Shared/MenuMessagerie.cshtml
@@ -5,6 +5,10 @@
         border-color: rgb(124, 105, 146);
         accent-color: rgb(249, 229, 71);
     }
+
+    .newMsg {
+        border-color: rgb();
+    }
 </style>
 
 
@@ -17,26 +21,26 @@
     </li>
     <li class="nav-item">
         <a class="nav-link @(Model == "Envoyes" ? "active" : "pasActif")"
-           asp-area="" asp-controller="Messagerie" asp-action="BoiteDeReception">
+           asp-area="" asp-controller="Messagerie" asp-action="Envoyes">
             Envoyés
         </a>
     </li>
     <li class="nav-item">
         <a class="nav-link @(Model == "Brouillons" ? "active" : "pasActif")"
-           asp-area="" asp-controller="Messagerie" asp-action="BoiteDeReception">
+           asp-area="" asp-controller="Messagerie" asp-action="Brouillons">
             Brouillons
         </a>
     </li>
     <li class="nav-item">
         <a class="nav-link @(Model == "Supprimes" ? "active" : "pasActif")"
-           asp-area="" asp-controller="Messagerie" asp-action="BoiteDeReception">
+           asp-area="" asp-controller="Messagerie" asp-action="Supprimes">
             Supprimés
         </a>
     </li>
     <li class="nav-item ms-auto">
-        <a class="nav-link @(Model == "EnvoyerMessage" ? "active" : "pasActif")"
+        <a class="nav-link border-bottom-0 border-3 @(Model == "EnvoyerMessage" ? "active" : "pasActif")" style="border-color: rgb(124, 105, 146)"
            asp-area="" asp-controller="Messagerie" asp-action="EnvoyerMessage">
-            Envoyer un message
+            <img src="~/Logo/pen.svg" />
         </a>
     </li>
 </ul>
