--- a/Projet Web Commerce/Views/Panier/Index.cshtml
+++ b/Projet Web Commerce/Views/Panier/Index.cshtml
@@ -85,7 +85,9 @@
 
                                             <div class="row mb-4 d-flex justify-content-between align-items-center">
                                                 <div class="col-md-2 col-lg-2 col-xl-2">
-                                                    <img class="img-fluid rounded-3"src="@Url.Content(imagePath)" alt="@item.Photo" width="100" height="120" />
+                                                    <a asp-controller="PPProduits" asp-route-id="@item.NoProduit" asp-action="Details">
+                                                               <img class="img-fluid rounded-3"src="@Url.Content(imagePath)" alt="@item.Photo" width="100" height="120" />
+                                                    </a>
                                                 </div>
                                                 <div class="col-md-3 col-lg-3 col-xl-3">
                                                     <h6 class="text-muted">@_context.PPCategories.Where(c => c.NoCategorie == item.NoCategorie).FirstOrDefault().Description</h6>
